Fix flex wrapping of content

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 .header {
@@ -21,13 +21,13 @@ ul {
     padding: 0px;
     display: flex;
     align-items: center;
-    margin-right: 200px;
 }
 
 a {
     text-decoration: none;
     padding: 15px;
     color: #f9faf8;
+    display: inline;
 
 }
 
@@ -35,25 +35,26 @@ a {
     font-size: 30px;
     font-weight: 900;
     padding: 10px;
-    margin-left: 200px;
 }
 
 .line1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 580px;
 }
 
 .header-text {
     display: flex;
-    justify-content: space-between;
-    gap: 50px;
+    justify-content: center;
+    gap: 100px;
+    flex-wrap: wrap;
 }
 
 .left-side {
     display: flex;
     flex-direction: column;
     width: 500px;
-    margin-left: 210px;
+    min-width: 400px;
     margin-top: 100px;
 }
 
@@ -88,8 +89,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 100px;
-    min-width: 200px;
+    min-width: 400px;
 }
 
 .img1 {
@@ -114,6 +114,7 @@ h3 {
     display: flex;
     justify-content: center;
     gap: 50px;
+    flex-wrap: wrap;
 }
 
 .serv-img {
@@ -156,6 +157,7 @@ h3 {
     font-style: italic;
     font-weight: 300;
     width: 800px;
+    text-wrap: wrap;
 }
 
 .quote .by-line {
